# api

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
.oxgen/: config.toml
src/: lib.rs  main.rs  state.rs
src/common/: error.rs  media.rs  mod.rs  response.rs  room_log.rs
src/modules/health/: controllers.rs  services.rs
src/modules/room/: controller.rs  dto.rs  mod.rs  model.rs  service.rs  video.rs
src/modules/room/websocket/: handler.rs  hub.rs  message.rs
src/modules/rooms/: controller.rs  dto.rs  mod.rs  model.rs  service.rs
src/routes/: health.rs  room.rs  rooms.rs
